# RustAdventofCode2024

./: Cargo.toml
src/01/: main.rs
src/02/: main.rs  second.rs
src/03/: main.rs  second.rs
src/04/: main.rs  second.rs
src/05/: main.rs
src/06/: main.rs
src/07/: main.rs  second.rs
src/08/: main.rs
src/09/: main.rs  second.rs
src/10/: main.rs  second.rs
src/11/: main.rs
src/12/: main.rs
src/13/: main.rs  second.rs
src/14/: main.rs
src/15/: example_small  main.rs
