[package]
name = "RustAdventofCode2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01"
path = "src/01/main.rs"

[[bin]]
name = "02"
path = "src/02/main.rs"

[[bin]]
name = "02_second"
path = "src/02/second.rs"

[[bin]]
name = "03"
path = "src/03/main.rs"

[[bin]]
name = "03_second"
path = "src/03/second.rs"


[dependencies]
regex = "1.11.1"