[package]
name = "RustAdventofCode2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01"
path = "src/01/main.rs"

[[bin]]
name = "02"
path = "src/02/main.rs"

[[bin]]
name = "02_second"
path = "src/02/second.rs"

[[bin]]
name = "03"
path = "src/03/main.rs"

[[bin]]
name = "03_second"
path = "src/03/second.rs"

[[bin]]
name = "04"
path = "src/04/main.rs"

[[bin]]
name = "04_second"
path = "src/04/second.rs"

[[bin]]
name = "05"
path = "src/05/main.rs"

[[bin]]
name = "06"
path = "src/06/main.rs"

[[bin]]
name = "07"
path = "src/07/main.rs"

[[bin]]
name = "07_second"
path = "src/07/second.rs"

[[bin]]
name = "08"
path = "src/08/main.rs"

[[bin]]
name = "09"
path = "src/09/main.rs"

[[bin]]
name = "09_second"
path = "src/09/second.rs"

[[bin]]
name = "10"
path = "src/10/main.rs"

[[bin]]
name = "10_second"
path = "src/10/second.rs"

[[bin]]
name = "11"
path = "src/11/main.rs"

[dependencies]
regex = "1.11.1"
itertools = "0.13.0"